--- a/src/main/resources/templates/users/modal/employee-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/employee-info-editing-modal.html
@@ -14,8 +14,8 @@
                     </div>
                     <div class="modal-body fs-5" id="employee-info-editing-modal-text">
                         <div class="visually-hidden mb-3" id="employee-info-editing-error">
-                            <div class="text-center fs-5 danger-block rounded h-100">
-                                <p class="mb-1 my-auto">Заполняемый текст</p>
+                            <div class="text-center fs-5 danger-block rounded p-2">
+                                <span class="my-auto">Заполняемый текст</span>
                             </div>
                         </div>
                         <form id="employee-info-editing-form" action="#" class="border rounded text-secondary fs-5 p-3">
