Поправил текст на странице больниц.

--- a/src/main/resources/templates/hospitals/hospitals.html
+++ b/src/main/resources/templates/hospitals/hospitals.html
@@ -57,7 +57,7 @@
                                     <span th:text="${each.formattedDate}"></span>
                                 </span>
                                 <span th:case="'REGISTERED'" class="text-success">
-                                    Зарегистрировано:
+                                    Зарегистрировано
                                     <span th:text="${each.formattedDate}"></span>
                                 </span>
                             </span>
