Решил проблему с некорректным поиском больницы по названию, содержащему запятую: теперь использую скрытый OID в input-поле, и по нему провожу верификацию больницы. Поправил js-код соответственно.

--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -42,6 +42,7 @@
                             <input list="hospitals" type="text" name="hospitalName" id="hospital-name" class="form-control" placeholder="Национальный медицинский исследовательский центр имени В. А. Алмазова" />
                             <ul id="hospitals" role="listbox" class="list-group fs-5 mt-2"></ul>
                         </div>
+                        <input type="hidden" name="hospitalOid" />
                         <div class="m-1 mb-3">
                             <label for="post" class="form-label">Ваша должность в этом медицинском учреждении <span class="text-danger fs-6"> *</span></label>
                             <input type="text" name="post" id="post" class="form-control" placeholder="Главный врач" />
