--- a/src/main/resources/templates/fragments/modal/code-input-modal.html
+++ b/src/main/resources/templates/fragments/modal/code-input-modal.html
@@ -12,7 +12,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body fs-5">
-                        <div class="mb-2 mt-1" id="code-input-error" style="display: none">
+                        <div class="visually-hidden mb-2 mt-1" id="code-input-error">
                             <div class="text-center fs-5 danger-block rounded h-100">
                                 <p class="mb-1 my-auto">Неверный код</p>
                             </div>
