--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -68,7 +68,7 @@
         <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
-        <script src="../static/js/code-check.js" th:src="@{/js/code-check.js}"></script>
+        <script src="../static/js/registration/code-check.js" th:src="@{/js/registration/code-check.js}"></script>
         <script src="../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
