--- a/src/main/resources/templates/users/modal/user-info-editing-modal.html
+++ b/src/main/resources/templates/users/modal/user-info-editing-modal.html
@@ -38,11 +38,9 @@
                             </div>
                             <div class="mb-3">
                                 <p class="form-label">Пол</p>
-                                <div class="form-check" th:each="each : ${genders}" id="gender">
-                                    <div>
-                                        <label class="form-check-label" th:for="${each}"></label>
-                                        <input th:id="${each}" type="radio" class="form-check-input" th:text="${each.alias}" th:value="${each}" name="gender" th:checked="${each == user.userInformation.gender}" />
-                                    </div>
+                                <div class="form-check" th:each="each : ${genders}">
+                                    <label class="form-check-label" th:for="${each}"></label>
+                                    <input th:id="${each}" type="radio" class="form-check-input" th:text="${each.alias}" th:value="${each}" name="gender" th:checked="${each == user.userInformation.gender}" />
                                 </div>
                             </div>
                             <div class="mb-4">
