--- a/src/main/resources/templates/users/user.html
+++ b/src/main/resources/templates/users/user.html
@@ -107,7 +107,7 @@
             <!---->
             <div class="row" th:classappend="${user.isDoctor && (isSelf || isCurrentUserAdminFromSameHospital) || user.isPatient} ? 'mb-5'">
                 <div class="col-12">
-                    <h3 class="fs-4">
+                    <h3 class="fs-4" id="activity">
                         Активность
                         <a
                             th:if="${user.isActive && (user.isHospitalEmployee && isCurrentUserAdminFromSameHospital && !isSelf || user.isPatient && isCurrentUserOwnDoctor)}"
@@ -115,11 +115,12 @@
                             data-bs-toggle="modal"
                             th:attr="data-bs-target=${target}"
                             class="text-decoration-none"
+                            id="inactivity-add"
                         >
                             <img width="20" src="../../static/svg/edit.svg" th:src="@{/svg/edit.svg}" alt="Редактировать" />
                         </a>
                     </h3>
-                    <p th:if="${user.isActive}" class="text-success mb-0">Активен</p>
+                    <p th:if="${user.isActive}" class="text-success mb-0" id="active">Активен</p>
                     <div th:if="${user.isNotActive}" class="mb-0">
                         <p id="info-inactivity" th:text="${currentInactivity.inactivityMessage}" class="text-danger mb-1">Уволен 19.01.2022</p>
                         <div th:if="${!isCurrentUserMainAdministrator}">
