--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -74,7 +74,7 @@
             <!---->
         </div>
         <!---->
-        <div th:replace="${param.patientId != null && currentUser.isAdministrator} ? ~{/fragments/modal/success-modal :: success-modal} : _"></div>
+        <div th:replace="${param.patientId != null && currentUser.isAdministrator} ? ~{/fragments/modal/success-modal :: success-modal} : ~{}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
         <script src="../../static/js/common/get-params.js" th:src="@{/js/common/get-params.js}"></script>
