Поправил js-код по работе с заявками на регистрацию больницы, поправил форму регистрации больницы.

--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -20,7 +20,7 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <form action="#" th:action="@{/rest/hospital-registration-requests/save}" method="post" class="border rounded bg-form fs-5 p-3" id="hospital-registration-form">
+                    <form action="#" method="post" class="border rounded bg-form fs-5 p-3" id="hospital-registration-form">
                         <h2 class="fs-4">Заявка</h2>
                         <hr class="mb-1" />
                         <div class="d-flex flex-row flex-wrap align-items-center justify-content-center mb-3">
@@ -63,7 +63,7 @@
                         </div>
                         <div class="m-1 mb-4">
                             <label for="comment" class="form-label">Комментарий</label>
-                            <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать что-нибудь про потенциальное будущее использование данного приложения вашим медицинским учреждением"></textarea>
+                            <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать что-нибудь про потенциальное будущее использование этого приложения вашим медицинским учреждением"></textarea>
                         </div>
                         <hr />
                         <button type="submit" class="btn btn-lg btn-primary my-1">Отправить</button>
