--- a/src/main/resources/templates/patients/anamnesis-form.html
+++ b/src/main/resources/templates/patients/anamnesis-form.html
@@ -23,43 +23,52 @@
                     <form action="#" method="post" id="hospital-registration-form" class="fs-5">
                         <div class="mb-5">
                             <h4 class="fs-4">Имеются ли у вас врождённые пороки сердца?</h4>
-                            <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="1">Да</label>
-                                <input id="1" type="radio" class="form-check-input" name="gender" />
+                            <!--<div class="form-check form-check-inline">
+                                <label class="form-check-label" for="heart-disease-1">Да</label>
+                                <input id="heart-disease-1" type="radio" class="form-check-input" name="heartDisease" />
                             </div>
                             <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="2">Нет</label>
-                                <input id="2" type="radio" class="form-check-input" name="gender" />
+                                <label class="form-check-label" for="heart-disease-2">Нет</label>
+                                <input id="heart-disease-2" type="radio" class="form-check-input" name="heartDisease" />
+                            </div>-->
+                            <div class="form-check form-check-inline" th:each="each : ${yesNo}">
+                                <label class="form-check-label" th:for="'heartDisease' + ${each}" th:text="${each.alias}"></label>
+                                <input th:id="'heartDisease' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="heartDisease" />
                             </div>
                         </div>
-
                         <div class="mb-5">
                             <h4 class="fs-4">Имеется ли у вас хроническое заболевание лёгких?</h4>
-                            <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="3">Да</label>
-                                <input id="3" type="radio" class="form-check-input" name="gender" />
+                            <!--<div class="form-check form-check-inline">
+                                <label class="form-check-label" for="lung-disease-1">Да</label>
+                                <input id="lung-disease-1" type="radio" class="form-check-input" name="lungDisease" />
                             </div>
                             <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="4">Нет</label>
-                                <input id="4" type="radio" class="form-check-input" name="gender" />
+                                <label class="form-check-label" for="lung-disease-1">Нет</label>
+                                <input id="lung-disease-1" type="radio" class="form-check-input" name="lungDisease" />
+                            </div>-->
+                            <div class="form-check form-check-inline" th:each="each : ${yesNo}">
+                                <label class="form-check-label" th:for="'lungDisease' + ${each}" th:text="${each.alias}"></label>
+                                <input th:id="'lungDisease' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="lungDisease" />
                             </div>
                         </div>
-
                         <div class="mb-5">
                             <h4 class="fs-4">Имелись ли хронические заболевания сердца или лёгких у ваших близких родственников?</h4>
-                            <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="5">Да</label>
-                                <input id="5" type="radio" class="form-check-input" name="gender" />
+                            <!--<div class="form-check form-check-inline">
+                                <label class="form-check-label" for="relatives-diseases-1">Да</label>
+                                <input id="relatives-diseases-1" type="radio" class="form-check-input" name="relativesDiseases" />
                             </div>
                             <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="6">Нет</label>
-                                <input id="6" type="radio" class="form-check-input" name="gender" />
+                                <label class="form-check-label" for="relatives-diseases-2">Нет</label>
+                                <input id="relatives-diseases-2" type="radio" class="form-check-input" name="relativesDiseases" />
+                            </div>-->
+                            <div class="form-check form-check-inline" th:each="each : ${yesNo}">
+                                <label class="form-check-label" th:for="'relativesDiseases' + ${each}" th:text="${each.alias}"></label>
+                                <input th:id="'relativesDiseases' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="relativesDiseases" />
                             </div>
                         </div>
-
                         <div class="mb-5">
                             <h4 class="fs-4">Какая у вас свёртываемость крови?</h4>
-                            <div class="form-check form-check-inline">
+                            <!--<div class="form-check form-check-inline">
                                 <label class="form-check-label" for="7">Легко образуются синяки</label>
                                 <input id="7" type="radio" class="form-check-input" name="gender" />
                             </div>
@@ -70,29 +79,36 @@
                             <div class="form-check form-check-inline">
                                 <label class="form-check-label" for="9">Тромбофлебит</label>
                                 <input id="9" type="radio" class="form-check-input" name="gender" />
+                            </div>-->
+                            <div class="form-check form-check-inline" th:each="each : ${bloodClotting}">
+                                <label class="form-check-label" th:for="'bloodClotting' + ${each}" th:text="${each.alias}"></label>
+                                <input th:id="'bloodClotting' + ${each}" type="radio" class="form-check-input" th:value="${each}" name="bloodClotting" />
                             </div>
                         </div>
-
                         <div class="mb-5">
                             <h4 class="fs-4">Имеется ли у вас сахарный диабет?</h4>
-                            <div class="form-check form-check-inline">
+                            <!--<div class="form-check form-check-inline">
                                 <label class="form-check-label" for="10">Да</label>
                                 <input id="10" type="radio" class="form-check-input" name="gender" />
                             </div>
                             <div class="form-check form-check-inline">
                                 <label class="form-check-label" for="11">Нет</label>
                                 <input id="11" type="radio" class="form-check-input" name="gender" />
+                            </div>-->
+                            <div class="form-check form-check-inline" th:each="each : ${yesNo}">
+                                <label class="form-check-label" th:for="'diabetes' + ${each}" th:text="${each.alias}"></label>
+                                <input th:id="'diabetes' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="diabetes" />
                             </div>
                         </div>
 
                         <div class="mb-5">
-                            <label for="name" class="form-label fs-4">Ваш рост (см)</label>
-                            <input type="text" name="name" id="name" class="form-control" placeholder="177" />
+                            <label for="height" class="form-label fw-semibold fs-4">Ваш рост (см)</label>
+                            <input type="number" name="height" id="height" class="form-control" placeholder="177" />
                         </div>
 
                         <div class="mb-5">
-                            <label for="name" class="form-label fs-4">Ваш вес (кг)</label>
-                            <input type="text" name="name" id="name" class="form-control" placeholder="64.9" />
+                            <label for="weight" class="form-label fw-semibold fs-4">Ваш вес (кг)</label>
+                            <input type="number" step="0.01" name="weight" id="weight" class="form-control" placeholder="64.9" />
                         </div>
 
                         <button type="submit" class="btn btn-lg btn-primary">Отправить</button>
