--- a/src/main/resources/templates/patients/anamnesis-form.html
+++ b/src/main/resources/templates/patients/anamnesis-form.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Сдача анамнеза</title>
+        <title>Анамнез</title>
         <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
         <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
         <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
@@ -12,7 +12,7 @@
         <link rel="icon" type="image/png" sizes="16x16" href="../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
     </head>
 
-    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-center bg-main">
+    <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
         <!---->
         <div th:replace="~{@{${headerPath}} :: ${headerName}}"></div>
         <!---->
@@ -23,14 +23,6 @@
                     <form action="#" method="post" id="hospital-registration-form" class="fs-5">
                         <div class="mb-5">
                             <h4 class="fs-4">Имеются ли у вас врождённые пороки сердца?</h4>
-                            <!--<div class="form-check form-check-inline">
-                                <label class="form-check-label" for="heart-disease-1">Да</label>
-                                <input id="heart-disease-1" type="radio" class="form-check-input" name="heartDisease" />
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="heart-disease-2">Нет</label>
-                                <input id="heart-disease-2" type="radio" class="form-check-input" name="heartDisease" />
-                            </div>-->
                             <div class="form-check form-check-inline" th:each="each : ${yesNo}">
                                 <label class="form-check-label" th:for="'heartDisease' + ${each}" th:text="${each.yesNo}"></label>
                                 <input th:id="'heartDisease' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="heartDisease" />
@@ -38,14 +30,6 @@
                         </div>
                         <div class="mb-5">
                             <h4 class="fs-4">Имеется ли у вас хроническое заболевание лёгких?</h4>
-                            <!--<div class="form-check form-check-inline">
-                                <label class="form-check-label" for="lung-disease-1">Да</label>
-                                <input id="lung-disease-1" type="radio" class="form-check-input" name="lungDisease" />
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="lung-disease-1">Нет</label>
-                                <input id="lung-disease-1" type="radio" class="form-check-input" name="lungDisease" />
-                            </div>-->
                             <div class="form-check form-check-inline" th:each="each : ${yesNo}">
                                 <label class="form-check-label" th:for="'lungDisease' + ${each}" th:text="${each.yesNo}"></label>
                                 <input th:id="'lungDisease' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="lungDisease" />
@@ -53,14 +37,6 @@
                         </div>
                         <div class="mb-5">
                             <h4 class="fs-4">Имелись ли хронические заболевания сердца или лёгких у ваших близких родственников?</h4>
-                            <!--<div class="form-check form-check-inline">
-                                <label class="form-check-label" for="relatives-diseases-1">Да</label>
-                                <input id="relatives-diseases-1" type="radio" class="form-check-input" name="relativesDiseases" />
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="relatives-diseases-2">Нет</label>
-                                <input id="relatives-diseases-2" type="radio" class="form-check-input" name="relativesDiseases" />
-                            </div>-->
                             <div class="form-check form-check-inline" th:each="each : ${yesNo}">
                                 <label class="form-check-label" th:for="'relativesDiseases' + ${each}" th:text="${each.yesNo}"></label>
                                 <input th:id="'relativesDiseases' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="relativesDiseases" />
@@ -68,18 +44,6 @@
                         </div>
                         <div class="mb-5">
                             <h4 class="fs-4">Какая у вас свёртываемость крови?</h4>
-                            <!--<div class="form-check form-check-inline">
-                                <label class="form-check-label" for="7">Легко образуются синяки</label>
-                                <input id="7" type="radio" class="form-check-input" name="gender" />
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="8">Кровь долго не останавливается</label>
-                                <input id="8" type="radio" class="form-check-input" name="gender" />
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="9">Тромбофлебит</label>
-                                <input id="9" type="radio" class="form-check-input" name="gender" />
-                            </div>-->
                             <div class="form-check form-check-inline" th:each="each : ${bloodClotting}">
                                 <label class="form-check-label" th:for="'bloodClotting' + ${each}" th:text="${each.yesNo}"></label>
                                 <input th:id="'bloodClotting' + ${each}" type="radio" class="form-check-input" th:value="${each}" name="bloodClotting" />
@@ -87,30 +51,19 @@
                         </div>
                         <div class="mb-5">
                             <h4 class="fs-4">Имеется ли у вас сахарный диабет?</h4>
-                            <!--<div class="form-check form-check-inline">
-                                <label class="form-check-label" for="10">Да</label>
-                                <input id="10" type="radio" class="form-check-input" name="gender" />
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <label class="form-check-label" for="11">Нет</label>
-                                <input id="11" type="radio" class="form-check-input" name="gender" />
-                            </div>-->
                             <div class="form-check form-check-inline" th:each="each : ${yesNo}">
                                 <label class="form-check-label" th:for="'diabetes' + ${each}" th:text="${each.yesNo}"></label>
                                 <input th:id="'diabetes' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="diabetes" />
                             </div>
                         </div>
-
                         <div class="mb-5">
                             <label for="height" class="form-label fw-semibold fs-4">Ваш рост (см)</label>
                             <input type="number" name="height" id="height" class="form-control" placeholder="177" />
                         </div>
-
                         <div class="mb-5">
                             <label for="weight" class="form-label fw-semibold fs-4">Ваш вес (кг)</label>
                             <input type="number" step="0.01" name="weight" id="weight" class="form-control" placeholder="64.9" />
                         </div>
-
                         <button type="submit" class="btn btn-lg btn-primary">Отправить</button>
                     </form>
                 </div>
